<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ActivityList" >

    <Button
        android:id="@+id/activity1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="47dp"
        android:text="@string/activity_button_1" />

    <Button
        android:id="@+id/addNewActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/activity1"
        android:layout_marginRight="14dp"
        android:text="@string/add_new_activity_button" />

    <Button
        android:id="@+id/activity5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/activity4"
        android:layout_below="@+id/activity4"
        android:text="@string/activity_button_5" />

    <Button
        android:id="@+id/activity4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/activity3"
        android:layout_below="@+id/activity3"
        android:text="@string/activity_button_4" />

    <Button
        android:id="@+id/activity2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/activity1"
        android:layout_below="@+id/activity1"
        android:text="@string/activity_button_2" />

    <Button
        android:id="@+id/activity3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/activity2"
        android:layout_below="@+id/activity2"
        android:text="@string/activity_button_3" />

</RelativeLayout>