<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ActivityList" >

    <TextView
        android:id="@+id/encouragement_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/encouragement_message_text" />

    <Button
        android:id="@+id/continue_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/encouragement_message"
        android:layout_below="@+id/encouragement_message"
        android:text="@string/continue_button" />

    <Button
        android:id="@+id/end_session"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/continue_prompt"
        android:layout_below="@+id/continue_prompt"
        android:text="@string/end_session_button" />

</RelativeLayout>