<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddNewActivity" >

    <TextView
        android:id="@+id/newAtivityPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="20dp"
        android:text="@string/new_activity" />

    <SeekBar
        android:id="@+id/startingSudsSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/startingSudsPrompt"
        android:layout_centerVertical="true" />

    <TextView
        android:id="@+id/startingSudsPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/startingSudsSlider"
        android:layout_alignLeft="@+id/startingSudsSlider"
        android:layout_marginBottom="44dp"
        android:text="@string/starting_suds_level" />

    <EditText
        android:id="@+id/newActivityTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/startingSudsPrompt"
        android:layout_alignRight="@+id/startingSudsPrompt"
        android:layout_below="@+id/newAtivityPrompt"
        android:layout_marginTop="16dp"
        android:inputType="text"
        android:ems="10" />
    
    <TextView
        android:id="@+id/starting_suds_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newActivityTextBox"
        android:layout_marginTop="20dp"
        android:text="@string/suds_default" />

    <Button
        android:id="@+id/newActivityCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/newActivitySubmitButton"
        android:layout_alignBottom="@+id/newActivitySubmitButton"
        android:layout_marginLeft="26dp"
        android:layout_toRightOf="@+id/newAtivityPrompt"
        android:text="@string/new_activity_cancel" />

    <Button
        android:id="@+id/newActivitySubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/newAtivityPrompt"
        android:layout_below="@+id/startingSudsSlider"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="81dp"
        android:text="@string/new_activity_submit" />

</RelativeLayout>